Updating the installation script. Also added initial 'starsearch' command

--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,6 +1,18 @@
+
+astropy==4.1
+astroquery==0.4.1
+beautifulsoup4==4.9.3
 certifi==2020.6.20
 chardet==3.0.4
+html5lib==1.1
 idna==2.10
+importlib-metadata==2.0.0
+keyring==21.4.0
+numpy==1.19.2
 python-decouple==3.3
 requests==2.24.0
+six==1.15.0
+soupsieve==2.0.1
 urllib3==1.25.11
+webencodings==0.5.1
+zipp==3.3.2
