--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,18 +1,26 @@
-
-astropy==4.1
+appdirs==1.4.4
+astropy==4.0.3
 astroquery==0.4.1
-beautifulsoup4==4.9.3
-certifi==2020.6.20
+beautifulsoup4==4.8.1
+bs4==0.0.1
+certifi==2019.6.16
 chardet==3.0.4
+distlib==0.3.1
+filelock==3.0.12
 html5lib==1.1
 idna==2.10
 importlib-metadata==2.0.0
 keyring==21.4.0
 numpy==1.19.2
-python-decouple==3.3
+pipi==1.0.1
+powerline-gitstatus==1.3.1
+powerline-status==2.7
 requests==2.24.0
+selenium==3.141.0
 six==1.15.0
-soupsieve==2.0.1
+soupsieve==1.9.5
+spotipy==2.16.0
 urllib3==1.25.11
+virtualenv==20.0.35
 webencodings==0.5.1
-zipp==3.3.2
+zipp==3.3.1
